# nannos

./: .bumpsemver.cfg  .gitignore  .gitmodules  .ops-ci-versions  .tmp  AGENTS.md  CONTEXT.md  LICENSE  README.md  TESTING_CHECKPOINTER.md  a2a-extensions.json  buildspec.yml  deploydest.yml  justfile  litellm-local-models.example.yaml  package-lock.json  package.json  start-dev.sh
app/agent-common/: pyproject.toml
app/agent-common/agent_common/: __init__.py  utils.py
app/agent-common/agent_common/a2a/: base.py  client_runnable.py  models.py
app/agent-common/agent_common/agents/: __init__.py  dynamic_agent.py  foundry_agent.py
app/agent-common/agent_common/backends/: __init__.py  indexing_store.py
app/agent-common/agent_common/core/: __init__.py  cost_tracking_embeddings.py  graph_utils.py  model_factory.py  semantic_chunking.py
app/agent-common/agent_common/middleware/: __init__.py  steering_middleware.py  storage_paths_middleware.py  tool_schema_cleaning.py
app/agent-common/agent_common/models/: __init__.py  base.py  exceptions.py
app/agent-common/tests/: test_a2a_client_runnable.py  test_conversation_scoped_storage.py  test_dynamic_agent.py  test_indexing_store_backend.py  test_interceptor.py  test_loop_detection_middleware.py
app/agent-creator/: .env.template  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/agent-creator/.github/: copilot-instructions.md
app/agent-creator/agent/: __init__.py  core.py
app/alloy-agent/: .env.template  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/alloy-agent/.github/: copilot-instructions.md
app/alloy-agent/agent/: __init__.py  core.py
app/foundry-jira-a2a-server/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
app/foundry-jira-a2a-server/a2a_server/: main.py
app/foundry-jira-a2a-server/a2a_server/handlers/: __init__.py  context_builder.py  executor.py
app/foundry-jira-a2a-server/a2a_server/middleware/: __init__.py  okta_auth_middleware.py
app/foundry-jira-a2a-server/agent/: __init__.py  agent.py  base.py  core.py  models.py
app/orchestrator-agent/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  log_conf.yml  main.py  pyproject.toml  pytest.ini
app/orchestrator-agent/.github/: copilot-instructions.md
app/orchestrator-agent/app/: utils.py
app/orchestrator-agent/app/a2a/: __init__.py  client.py  config.py  factory.py  models.py
app/orchestrator-agent/app/a2a_utils/: __init__.py  base.py  client_runnable.py  config.py  factory.py  models.py  structured_response.py
app/orchestrator-agent/app/agents/: dynamic_agent.py  file_analyzer.py  foundry_agent.py  gp_agent.py  task_scheduler.py
app/orchestrator-agent/app/authentication/: __init__.py  agent_security_config.py  in_task_auth.py  interceptor.py  okta_token_exchange.py
app/orchestrator-agent/app/backends/: __init__.py  indexing_store.py
app/orchestrator-agent/app/core/: __init__.py  agent.py  executor.py  (+13 more)
app/orchestrator-agent/docs/: authentication-authorization-flow.md  subagent-flow.md
app/orchestrator-agent/tests/: conftest.py  test_a2a_client_runnable.py  test_a2a_middleware.py  test_agent_executor.py  test_authentication.py  test_bedrock_timeout_config.py  test_budget_guard.py  test_client_credentials.py  test_config.py  test_content_builder.py  test_discovery.py  test_document_store_middleware.py  test_dynamic_agent.py  test_error_handler.py  test_final_response_schema.py  test_gp_agent.py  test_graph_factory.py  test_graph_manager.py  test_interceptor.py  test_loop_detection_middleware.py  test_orchestrator_thinking_integration.py  test_registry.py  test_responses.py  test_runtime.py  test_stream_handler.py  test_thinking_level.py  test_time_tools.py  test_tool_schema_cleaning.py  test_toolset_selector_middleware.py  test_user_preferences_middleware.py
app/playground-backend/: .env.template  .gitignore  Dockerfile  INTEGRATION_EXAMPLE.py  app.py  nannos-local.session.sql  package-lock.json  package.json  pyproject.toml
app/playground-backend/.github/: copilot-instructions.md
app/playground-backend/playground_backend/: authorization.py  config.py  dependencies.py  service_instances.py
app/playground-backend/scripts/: build-db-container.sh  run.ps1
app/playground-backend/src/: app.py  config.py  dependencies.py  exceptions.py  service_instances.py
app/playground-backend/tests/: __init__.py  conftest.py  test_admin_group_router.py  test_admin_user_router.py  test_audit_integration.py  test_audit_service.py  test_auth_controller.py  test_auth_router.py  test_authorization.py  test_bulk_activation.py  test_bulk_activation_notifications.py  test_connection_pool.py  test_conversation_router.py  test_conversation_service.py  test_conversation_service_unit.py  test_cookie_utils.py  test_default_agents_router.py  test_dependencies.py  test_group_default_agents.py  test_group_router.py  test_index_route.py  test_keycloak_admin_service.py  test_keycloak_group_prefix.py  test_mcp_router.py  test_message_router.py  test_messages_service_unit.py  test_notification_router.py  test_notification_service.py  test_notification_transaction_isolation.py  test_oauth_service.py  test_pricing_config_read_write.py  test_rate_card_agent_specific.py  test_rate_card_fallback.py  test_scheduler_engine.py  test_scheduler_service.py  test_secrets_service.py  test_services_more.py  test_session_service.py  test_socket_message_handling.py  test_sub_agent_permissions.py  (+11 more)
app/ringier-a2a-sdk/: .bumpsemver.cfg  README.md  pyproject.toml
app/ringier-a2a-sdk/.github/: copilot-instructions.md
app/ringier-a2a-sdk/ringier_a2a_sdk/: __init__.py  models.py
app/ringier-a2a-sdk/tests/: conftest.py  test_agent.py  test_bedrock_prompt_caching.py  test_billing_unit_extraction.py  test_cost_tracking_mixin.py  test_jwt_validator.py  test_jwt_validator_middleware.py  test_langgraph_bedrock_middleware.py  test_langgraph_streaming.py  test_mcp_progress.py  test_middleware.py  test_models.py  test_oauth.py  test_server.py  test_steering_executor.py  test_tool_schema_cleaning.py
(+380 files in other folders)
