[project]
name = "playground-backend"
version = "0.7.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[all]>=0.3.20",
    "httpx[http2]>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "python-socketio",
    "jinja2",
    "bleach>=6.2.0",
    "rcplus-alloy-common>=8.6.1",
    "pyyaml>=6.0.3",
    "boto3>=1.35.0",
    "aiobotocore>=2.15.0",
    "aiodynamo[httpx]>=24.2.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "cachetools>=5.5.0",
    "ringier-a2a-sdk>=0.1.0",
    "uuid6>=2024.7.10",
    "fastapi-mcp>=0.4.0",
    "python-keycloak>=7.0.2",
    "python-multipart>=0.0.9",
    "croniter>=2.0.0",
    "jsonpath-ng>=1.6.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["playground_backend*"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "respx>=0.22.0",
    "ruff>=0.11.6",
    "types-requests",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.0",
    "pytest-mock>=3.12.0",
    "asgi-lifespan>=2.1.0",
    "python-socketio[asyncio_client]",
    "docker>=7.0.0",
    "aiomoto[ssm]>=0.1.1,<0.2.0",
    "testcontainers[postgres]>=4.0.0",
    "asyncpg>=0.30.0",
    "pytest-anyio>=0.0.0",
    "debugpy>=1.8.20",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
env = [
  # OIDC Authentication
  "OIDC_CLIENT_SECRET=test-client-secret",
  "OIDC_CLIENT_ID=agent-console",
  "OIDC_ISSUER=https://login.p.nannos.rcplus.io/realms/nannos",
  # DynamoDB Configuration
  "AWS_REGION=eu-central-1",
  "DYNAMODB_USERS_TABLE=test-nannos-infrastructure-agents-users",
  "DYNAMODB_SESSIONS_TABLE=test-nannos-infrastructure-agents-chat-ui-sessions",
  # Orchestrator Configuration
  "ORCHESTRATOR_CLIENT_ID=orchestrator",
  "ORCHESTRATOR_BASE_DOMAIN=localhost:10001",
  "ORCHESTRATOR_ENVIRONMENT=local",
  # Chat UI Configuration
  "ENVIRONMENT=local",
  "BASE_DOMAIN=localhost:5001",
  "SECRET_KEY=test-secret-key-for-testing",
  "AWS_ACCESS_KEY_ID=testing",
  "AWS_SECRET_ACCESS_KEY=testing",
  "AWS_SECURITY_TOKEN=testing",
  "AWS_SESSION_TOKEN=testing",
  "AWS_DEFAULT_REGION=us-east-1",
  "AWS_REGION=us-east-1",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/dist",
  "**/build",
  "**/node_modules",
  "**/venv",
  "**/.venv",
]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.uv.sources]
ringier-a2a-sdk = { path = "../ringier-a2a-sdk", editable = true }
